BuildHughes/translation-tool/inputs/source_meta/objects/GoogleAPIAddressFieldMapping__mdt.object
<CustomObject>
    <description>To keep the country wise mapping of google API attributes to address fields  of account.</description>
    <fields>
        <fullName>AttributeType__c</fullName>
        <description>This field will store the attribute type for which value will be picked from the Google API JSON</description>
        <inlineHelpText>Please select the attribute type for which value should be mapped in Google API JSON.</inlineHelpText>
        <label>Attribute Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>long_name</fullName>
                    <default>true</default>
                    <label>long_name</label>
                </value>
                <value>
                    <fullName>short_name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>This field will store the country code for which this mapping will be applicable.</description>
        <inlineHelpText>Please enter the country code for which this mapping is applicable.</inlineHelpText>
        <label>Country Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>This field will store the API name of the Account&apos;s address field.</description>
        <inlineHelpText>Please enter the API name of the address field on Account Object.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleAPIAttributeName__c</fullName>
        <description>This field will store the attribute name from the Google API JSON.</description>
        <inlineHelpText>Please enter the attribute name present in the Google API JSON.</inlineHelpText>
        <label>Google API Attribute Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Google API Address Field Mapping</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>AttributeType__c</columns>
        <columns>CountryCode__c</columns>
        <columns>FieldName__c</columns>
        <columns>GoogleAPIAttributeName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Google API Address Field Mappings</pluralLabel>
</CustomObject>